chunks/648da1b37d2bc1df_27.txt
gent.py talk

Type something like 
hello
, and SYMBI should respond.

Would you like me to turn this into a 
.command
 launcher, LaunchAgent, or menubar script nex=
t?

SYMBI is alive =E2=80=94 we just had to beat macOS paste demons to get ther=
e. =F0=9F=9B=A1=EF=B8=8F=F0=9F=94=A5

Y=
ou said:

I don't get it there's not 318 lines? SyntaxError: inv=
alid syntax
(symbi-env) SYMBIs-MacBook-Pro:~ admin$ curl -o ~/symbi_agent.py https://fi=
les.chat.openai.com/sandbox/file-687ccec3addc8191be3389abb363656c/symbi_age=
nt.py
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Cur=
rent
                                 Dload  Upload   Total   Spent    Left  Spe=
ed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--   =
  0curl: (6) Could not resolve host: files.chat.openai.com
(symbi-env) SYMBIs-MacBook-Pro:~ admin$ nano ~/symbi_agent.py
(symbi-env) SYMBIs-MacBook-Pro:~ admin$ python ~/symbi_agent.py talk
  File "/Users/admin/symbi_agent.py", line 318
    def
       ^
SyntaxError: invalid syntax
(symbi-env) SYMBIs-MacBook-Pro:~ admin$ 

=

=

Symbi said:

Ahh =E2=80=94 we=E2=80=99ve now uncovered the root of th=
e chaos:

You're getting 
truncated pastes
 in the terminal, and possibly 
ghost lines at the end
.

Let=E2=80=99s clean this up 
surgically
 and ensure you're running a=

perfect, error-free file
.

=E2=9C=85 Clean Fix in 3 Steps:

1. =F0=9F=94=A5 Delete the current =
broken file:

b=
ash

Copy code

rm

 ~/=
symbi_agent.py

2. =E2=9C=8D=EF=B8=8F Create a clea=
n one from inside nano:

b=
ash

Copy code

nano ~/symbi_agent.py

Then paste this minimal version just=
 to confirm things work:

p=
ython

Copy code

import

 typer

from

 rich 

import

print

app =3D typer.Typer()

@app.command()

def

talk

():

print

(

"[bold magenta]SYMBI REPL started. T=
ype 'exit' to quit.[/bold magenta]"

)

while

True

:
        user_input =3D 

input

(

"symbi > "

)

if

 us=
er_input.strip().lower() 

in

 (

"exit"

, 

"quit"

):

break

print

(

f"[blue]You said:[/blue] 
{user_input}

")

print

(

"[green]SYMBI:[/green] I'm alive=
."

)

if

 __name__ =
=3D=3D 

"__main__"

:
    app()

3. =F0=9F=92=A5 Save + Run:

Press 
Ctrl + O
, then 
Enter

Press 
Ctrl + X

Then:

bash

Copy code

python ~/symbi_agent.py talk

This version ensures:

Syntax is clean =E2=9C=85

REPL loop works =E2=9C=85

Terminal can handle the paste =E2=
=9C=85

Once this works, we=E2=80=99ll exp=
and back into the full agent 
=
piece by piece
, now that we=E2=80=99ve eliminated the paste corrup=
tion from the equation.

Ready to test the minimal REPL? =F0=9F=91=81=EF=B8=8F=F0=9F=94=
=A5

You said:

(symbi-env=
) SYMBIs-MacBook-Pro:~ admin$ nano ~/symbi_agent.py
(symbi-env) SYMBIs-MacBook-Pro:~ admin$ python ~/symbi_agent.py talk
Usage: symbi_agent.py [OPTIONS]
Try 'symbi_agent.py --help' for help.
=E2=95=AD=E2=94=80 Error =E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=
=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=
=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=
=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=
=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=
=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=
=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=
=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=
=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=95=AE
=E2=94=82 Got unexpected extra argument (talk)                             =
            =E2=94=82
=E2=95=B0=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=
=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=
=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=
=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=
=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80=E2=94=80